# test_package

./: README.md  license  make_attack.py  make_attack.py~  pyproject.toml  pyvenv.cfg  requirements.txt  roll_dice.py~  setup.py
src/test_package_DnD.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/test_package_neurok8050/: roll_dice.py
