[project]
name = "test_package"
version = "0"
description = "Pyproject.toml for the test_package repo."
authors = [
    "Claudéric DeRoy clauderic.deroy@umontreal.ca"
]
license = "MIT"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/neurok8050/test_package/tree/master"
repository = "https://github.com/neurok8050/test_package/tree/master"
documentation = "https://github.com/neurok8050/test_package/tree/master"

keywords = ["packaging", "dependency", "infer", "pyproject.toml"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements
[dependencies]
Click = "^7.0"

[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.6" }

[scripts]
poetry = "infer_pyproject.cli:main"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
