[project]
name = "test_package_DnD"
version = "0.0.1"
authors = [
  { name="Claudéric DeRoy", email="clauderic.deroy@umontreal.ca" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/neurok8050/test_package"
